<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark"
    android:fillViewport="true"
    android:theme="@style/Theme.TestCourses"
    tools:context=".ui.fragment.LoginFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.fragment.LoginFragment">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/left_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/guideline" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/right_border"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/guideline" />

        <TextView
            android:id="@+id/tv_title"
            style="@style/Text_Headline"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:text="@string/auth_title"
            app:layout_constraintEnd_toEndOf="@id/right_border"
            app:layout_constraintStart_toStartOf="@id/left_border"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_email_label"
            style="@style/Text_TitleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_28"
            android:text="@string/auth_email"
            app:layout_constraintEnd_toEndOf="@id/right_border"
            app:layout_constraintStart_toStartOf="@id/left_border"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <EditText
            android:id="@+id/et_email"
            style="@style/EditTextBackground.Login"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_field_height"
            android:layout_marginTop="@dimen/margin_8"
            android:autofillHints="emailAddress"
            android:hint="@string/auth_email_hint"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="@id/right_border"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@id/left_border"
            app:layout_constraintTop_toBottomOf="@+id/tv_email_label" />

        <TextView
            android:id="@+id/tv_password_label"
            style="@style/Text_TitleMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/guideline"
            android:text="@string/auth_password"
            app:layout_constraintEnd_toEndOf="@id/right_border"
            app:layout_constraintStart_toStartOf="@id/left_border"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <EditText
            android:id="@+id/et_password"
            style="@style/EditTextBackground.Login"
            android:layout_width="0dp"
            android:layout_height="@dimen/edit_field_height"
            android:layout_marginTop="@dimen/margin_8"
            android:autofillHints="password"
            android:hint="@string/auth_password_hint"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@id/right_border"
            app:layout_constraintStart_toStartOf="@id/left_border"
            app:layout_constraintTop_toBottomOf="@+id/tv_password_label" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24"
            android:text="@string/auth_title"
            app:layout_constraintEnd_toEndOf="@id/right_border"
            app:layout_constraintStart_toStartOf="@id/left_border"
            app:layout_constraintTop_toBottomOf="@+id/et_password" />

        <TextView
            android:id="@+id/tv_not_account"
            style="@style/Text_ButtonSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/guideline"
            android:text="@string/auth_not_account"
            app:layout_constraintEnd_toStartOf="@id/tv_register"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_login" />

        <TextView
            android:id="@+id/tv_register"
            style="@style/Text_ButtonSmall.Active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8"
            android:text="@string/auth_register"
            app:layout_constraintBottom_toBottomOf="@id/tv_not_account"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/tv_not_account"
            app:layout_constraintTop_toTopOf="@id/tv_not_account" />

        <TextView
            android:id="@+id/tv_forgot_password"
            style="@style/Text_ButtonSmall.Active"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:text="@string/auth_forgot_password"
            app:layout_constraintEnd_toEndOf="@id/right_border"
            app:layout_constraintStart_toStartOf="@id/left_border"
            app:layout_constraintTop_toBottomOf="@id/tv_register" />

        <com.google.android.material.divider.MaterialDivider
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_32"
            app:dividerColor="@color/stroke"
            app:dividerInsetEnd="@dimen/guideline"
            app:dividerInsetStart="@dimen/guideline"
            app:layout_constraintTop_toBottomOf="@id/tv_forgot_password" />


        <ImageView
            android:id="@+id/iv_vk"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_28"
            android:layout_marginEnd="@dimen/guideline"
            android:background="@drawable/btn_vk"
            android:clickable="true"
            android:contentDescription="@null"
            android:focusable="true"
            app:layout_constraintEnd_toStartOf="@id/iv_ok"
            app:layout_constraintStart_toStartOf="@id/left_border"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <ImageView
            android:id="@+id/iv_ok"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_28"
            android:background="@drawable/btn_ok"
            android:clickable="true"
            android:contentDescription="@null"
            android:focusable="true"
            app:layout_constraintEnd_toEndOf="@id/right_border"
            app:layout_constraintStart_toEndOf="@id/iv_vk"
            app:layout_constraintTop_toBottomOf="@id/divider" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>